# Async_pract

./: 01_intro.py  02_gather.py  03_create_task.py  04_forever.py  05_future_task.py  06_bounds.py  07_process_executor.py  08_get_http.py  09_01_async_for.py  09_02_async_for.py  09_03_async_for.py  10_queue.py  11_wait.py  12_client_aiohttp.py  13_client_httpx.py  pyproject.toml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
