[tool.poetry]
name = "python-se-hw5"
version = "0.1.0"
description = "get currency from privatbank"
authors = ["Kate Kozachenko <kottya1995@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^25.8.0"
requests = "^2.32.3"
aiohttp = "^3.9.5"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
